# Raytracer

./: CMakeLists.txt  README.md  image.ppm  low_res_final_image_with_pyramid.ppm  un-stratified-sample.ppm
Raytracer/: AABB.cpp  AABB.hpp  BSSRDFSampler.hpp  BVH.cpp  BVH.hpp  CMakeLists.txt  Camera.cpp  Camera.hpp  ConstantMedium.cpp  ConstantMedium.hpp  Constants.hpp  HitPool.cpp  HitPool.hpp  Hittable.cpp  Hittable.hpp  ITexture.hpp  ImageLoader.cpp  ImageLoader.hpp  Interval.cpp  Interval.hpp  Main.cpp  Material.hpp  OrthonormalBasis.hpp  PDF.hpp  Perlin.cpp  Perlin.hpp  Quad.cpp  Quad.hpp  Ray.hpp  Scene.hpp  Sphere.cpp  Sphere.hpp  TextureWrapper.cpp  TextureWrapper.hpp  Utilities.hpp  simple_sss_cornell.hpp
Raytracer/Shapes/: Box.cpp  Box.hpp  Cone.cpp  Cone.hpp  Cylindroid.cpp  Cylindroid.hpp  Ellipse.hpp  Pyramid.cpp  Pyramid.hpp  Quad.cpp  Quad.hpp  Shapes.hpp  Sphere.cpp  Sphere.hpp  Triangle.hpp
